# guitartoneemulator

./: .gitignore  CMakeLists.txt  README.md
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessAudio.cpp
Source/Audio/: AudioProcessor.cpp  AudioProcessor.h
Source/Features/: FeatureExtractor.cpp  FeatureExtractor.h
Source/Neural/: NeuralProcessor.cpp  NeuralProcessor.h  RTNeuralWrapper.cpp  RTNeuralWrapper.h  ToneMatcher.cpp  ToneMatcher.h
Source/Visualization/: ToneVisualizer.cpp  ToneVisualizer.h
Test/: CMakeLists.txt  FeatureExtractorTest.cpp  TestToneGenerator.h  ToneMatcherTest.cpp
